--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,14 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  device_info: ^1.0.0
+  draw: ^0.9.1
+  package_info: ^0.4.3+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
