start some auth code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+secrets.dart
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,flutter,dart,visualstudiocode,android,androidstudio,xcode,jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,flutter,dart,visualstudiocode,android,androidstudio,xcode,jetbrains
 
