--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   device_info: ^1.0.0
   draw: ^0.9.1
   package_info: ^0.4.3+2
+  provider: ^4.3.2+2
+  url_launcher: ^5.7.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
