--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,6 @@ include: package:effective_dart/analysis_options.yaml
 linter:
   rules:
     public_member_api_docs: false
+
+    # https://github.com/flutter/flutter/issues/40808
+    prefer_mixin: false
