--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   package_info: ^0.4.3+2
   provider: ^4.3.2+2
   url_launcher: ^5.7.10
+  uuid: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
